# rich-covid19-cli

./: .gitignore  README.md  mypy.ini  pyproject.toml
rich_covid19_cli/: __init__.py  api.py  cli_ui.py  main.py  models.py
rich_covid19_cli/data/: country.json
